--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,18 +3,22 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
+  /* --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-end-rgb: 255, 255, 255; */
+ --foreground-rgb: white;
+  --background-start-rgb: white;
+  --background-end-rgb: white; 
+
   margin: 0;
-  color: black;
+  color: white;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: black;
-    --background-start-rgb: black;
-    --background-end-rgb: black;
+    --foreground-rgb: white;
+    --background-start-rgb: white;
+    --background-end-rgb: white;
   }
 }
 
